--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/quoteCard"
     android:layout_width="170dp"
     android:gravity="center"
@@ -14,7 +14,11 @@
     android:layout_marginEnd="8dp"
     android:textSize="16sp"
     android:background="@color/colorViolet"
-    android:layout_height="130dp">
+    android:layout_height="130dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    card_view:cardMaxElevation="6dp"
+    >
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
