--- a/app/src/main/res/layout/quote_item_big.xml
+++ b/app/src/main/res/layout/quote_item_big.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/quoteCard"
     android:gravity="center"
     android:paddingStart="16dp"
@@ -11,7 +11,10 @@
     android:textSize="16sp"
     android:background="@color/colorViolet"
     android:layout_width="300dp"
-    android:layout_height="230dp">
+    android:layout_height="230dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    card_view:cardMaxElevation="6dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -49,6 +52,7 @@
             android:paddingStart="16dp"
             android:maxLines="5"
             android:textSize="18sp"
+            android:text="Как басня, так и жизнь ценится не за длину, но за содержание."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +73,7 @@
             android:paddingEnd="24dp"
             android:paddingStart="24dp"
             android:textSize="14sp"
+            android:text="Сенека"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
