--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/quoteCard"
-    android:layout_width="170dp"
+    android:layout_width="180dp"
     android:gravity="center"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
@@ -14,9 +14,10 @@
     android:layout_marginEnd="8dp"
     android:textSize="16sp"
     android:background="@color/colorViolet"
-    android:layout_height="130dp"
+    android:layout_height="150dp"
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="4dp"
+    app:cardUseCompatPadding="true"
     card_view:cardMaxElevation="6dp"
     >
 
@@ -37,7 +38,7 @@
             android:layout_marginTop="16dp"
             android:contentDescription="quotes"
             android:src="@drawable/icons_quote"
-            app:layout_constraintBottom_toTopOf="@+id/quoteModel"
+            app:layout_constraintBottom_toTopOf="@+id/quote"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.531"
             app:layout_constraintStart_toStartOf="parent"
