--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,22 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kanykeinu.quotesapp.MainActivity"
-    android:background="@drawable/background1">
-
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/categoriesList"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layoutAnimation="@anim/layout_category_anim"/>
+    tools:context="com.kanykeinu.quotesapp.MainActivity">
 
 
     <include layout="@layout/quote_item_big"
         android:id="@+id/big"
         android:layout_below="@id/categoriesList"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:layout_height="230dp"
+        android:layout_marginTop="40dp"
+        android:layout_height="320dp"
         android:layout_width="300dp" />
 
   <android.support.v7.widget.RecyclerView
