--- a/app/src/main/res/drawable/category_background.xml
+++ b/app/src/main/res/drawable/category_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <solid android:color="#087f23"/>
+        <solid android:color="@color/colorCategory"/>
         <corners
             android:bottomLeftRadius="16dp"
             android:bottomRightRadius="16dp"
