--- a/app/src/main/res/layout/activity_sub_category.xml
+++ b/app/src/main/res/layout/activity_sub_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".SubCategoryActivity">
+    tools:context=".ui.SubCategoryActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/subCategoriesList"
